# ARCS

./: .$erase_bot_arch.bkp  .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  README.md  meeting_17_10_2022.md  plot_jnt.py  sprints.md
admin/notes/: Project Description.md  brendan.md
data/: README.txt  iiwase_log_1.csv  iiwase_log_2.csv  iiwase_log_abag_bias3_a_02.csv  iiwase_log_abag_bias_static2.csv  iiwase_log_lp_1_11.csv  iiwase_log_lp_1_3.csv  iiwase_log_lp_1_6.csv  iiwase_log_moving_avg.csv  iiwase_log_no_avg.csv  iiwase_log_no_gain_block.csv  iiwase_log_three_abag.csv  logging1.csv  logging2.csv
data/ARCS_dataset_whiteboard/: image_1662434952.293166874_IntensityRight_00_00.pgm  image_1662434952.293166874_Intensity_00_00.pgm  image_1662434952.373558757_Confidence_00_00.pgm  image_1662434952.373558757_Disparity_00_00.pfm  image_1662434952.373558757_Disparity_00_00_param.txt  image_1662434952.373558757_Error_00_00.pgm  image_1662434952.373558757_IntensityRight_00_00.pgm  image_1662434952.373558757_Intensity_00_00.pgm  image_1662434952.453949277_Confidence_00_00.pgm  image_1662434952.453949277_Disparity_00_00.pfm  image_1662434952.453949277_Error_00_00.pgm  image_1662434952.453949277_IntensityRight_00_00.pgm  image_1662434952.453949277_Intensity_00_00.pgm  image_1662434952.534342150_IntensityRight_00_00.pgm  image_1662434952.534342150_Intensity_00_00.pgm  image_1662434952.534342150_Intensity_00_00_param.txt  image_1662434955.508839116_IntensityRight_00_00.pgm  image_1662434955.508839116_Intensity_00_00.pgm  image_1662434955.508839116_Intensity_00_00_param.txt  image_1662434955.589230710_Confidence_00_00.pgm  image_1662434955.589230710_Disparity_00_00.pfm  image_1662434955.589230710_Error_00_00.pgm  image_1662434955.589230710_IntensityRight_00_00.pgm  image_1662434955.589230710_Intensity_00_00.pgm  image_1662434955.669622490_Confidence_00_00.pgm  image_1662434955.669622490_Disparity_00_00.pfm  image_1662434955.669622490_Disparity_00_00_param.txt  image_1662434955.669622490_Error_00_00.pgm  image_1662434955.669622490_IntensityRight_00_00.pgm  image_1662434955.669622490_Intensity_00_00.pgm  image_1662434955.750014343_IntensityRight_00_00.pgm  image_1662434955.750014343_Intensity_00_00.pgm  image_1662435026.655708419_Confidence_00_00.pgm  image_1662435026.655708419_Disparity_00_00.pfm  image_1662435026.655708419_Error_00_00.pgm  image_1662435026.655708419_IntensityRight_00_00.pgm  image_1662435026.655708419_Intensity_00_00.pgm  image_1662435026.655708419_Intensity_00_00_param.txt  image_1662435026.736100139_Confidence_00_00.pgm  image_1662435026.736100139_Disparity_00_00.pfm  (+168 more)
docs/: .$activity_architecture.drawio.bkp  .$arch.drawio.bkp  .$arch.drawio.dtmp  .$erase_bot_arch.xml.bkp  .$erase_bot_arch.xml.dtmp  .notes_20230103_control.md.swp  Project Description.md  activity_architecture.drawio  erase_bot_arch.xml  fsm.ods  meeting_17_10_2022.md  notes_20230103_control.md  project_description.md  roboception_tutorial.md
docs/meeting_notes/: sprints.md
include/: data_logger.hpp  iiwa_activity.hpp  iiwa_client.hpp  iiwa_controller_activity.hpp  iiwa_interface.hpp  iiwa_virtual.hpp  navigation.hpp
include/iiwa/: iiwa_controller.hpp  iiwa_controller_activity.hpp  iiwa_controller_petrinet.hpp  iiwa_state_estimation.hpp  iiwa_virtual.hpp
include/task_mediator/: task_mediator.hpp  task_mediator_petrinet.hpp
opencv_test/: CMakeLists.txt  image_scan_test.cpp  webcam_test.cpp
scripts/: plot_jnt.py  plot_log.ipynb  plot_log.py  plot_log_louis.ipynb
scripts/.ipynb_checkpoints/: plot_log-checkpoint.ipynb
src/: data_logger.cpp  iiwa_activity.cpp  iiwa_client.cpp  iiwa_controller_activity.cpp  iiwa_demo.cpp  iiwa_demo_q.cpp  iiwa_demo_virtual.cpp  iiwa_interface.cpp  iiwa_virtual.cpp  iiwase_demo.cpp  navigation.cpp
src/demo/: iiwa_demo.cpp  iiwa_demo_mediated.cpp  iiwa_demo_virtual.cpp  iiwase_demo.cpp  kuka_iiwa.cpp
src/iiwa/: iiwa_activity.cpp  iiwa_client.cpp  iiwa_controller.cpp  iiwa_controller_activity.cpp  iiwa_controller_petrinet.cpp  iiwa_interface.cpp  iiwa_state_estimation.cpp  iiwa_virtual.cpp
src/iiwa-aacal/: CMakeLists.txt
src/iiwa-aacal/include/: iiwa_client.hpp  iiwa_interface.hpp
src/iiwa-aacal/src/: iiwa_activity.cpp  iiwa_client.cpp  iiwa_demo.cpp  iiwa_interface.cpp
src/task_mediator/: task_mediator.cpp  task_mediator_petrinet.cpp
whiteboard_recognition/: AAA  CMakeLists.txt  closing.cpp  closing_adaptive.cpp  compute_color_hist.cpp  detect_rect.py  detect_whiteboard.cpp  detect_writings.cpp  detecting_algo.py  region_growing.cpp  template_matching.cpp  whiteboard_recognition.cpp
